[gd_scene load_steps=2 format=3 uid="uid://nbsr0chgkdh"]

[ext_resource type="Script" path="res://ChatWindow.gd" id="1_3pbam"]

[node name="ChatWindow" type="Panel"]
custom_minimum_size = Vector2(100, 100)
offset_right = 615.0
offset_bottom = 560.0
script = ExtResource("1_3pbam")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 603.0
offset_bottom = 495.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="TextEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 519.0
offset_right = 604.0
offset_bottom = 550.0
placeholder_text = "Write your message here"

[connection signal="text_submitted" from="TextEdit" to="." method="_on_text_edit_text_submitted"]
